--- a/css/style.css
+++ b/css/style.css
@@ -32,14 +32,18 @@ a {
 .navigation-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     text-decoration: none;
     list-style: none;
     padding: 0;
     margin: 0;
-    width: 440px;
     padding-left: 201px;
     padding-top: 25px;
+    width: 514px;
+    flex-wrap: wrap;
+}
+
+.navigation-list .navigation-item {
+    margin-right: 46px;
 }
 
 .main-navigation {
@@ -103,12 +107,13 @@ a {
 .cart {
     position: relative;
     display: inline-block;
+    vertical-align: top;
     font-size: 16px;
     line-height: 30px;
     font-weight: 500;
     color: #000000;
     text-transform: uppercase;
-    margin-left: 224px;
+    margin-left: 150px;
     padding-left: 60px;
     padding-top: 25px;
 }
@@ -167,7 +172,7 @@ a {
 .slider {
     position: relative;
     width: 1200px;
-    min-height: 426px;
+    min-height: 430px;
     margin: 0 auto;
     z-index: 1;
 }
@@ -222,13 +227,6 @@ a {
     padding-top: 43px;
 }
 
-.slide-title {
-    font-size: 36px;
-    line-height: 1;
-    font-weight: bold;
-    color: black;
-}
-
 .slide .btn {
     display: block;
     width: 240px;
@@ -255,18 +253,18 @@ a {
 
 .slide:nth-child(1) {
     background-image: url("../img/slide1.png");
-    background-position: 93% 13px;
+    background-position: 93% 17px;
 }
 
 .slide:nth-child(2) {
     background-image: url("../img/slide2.png");
-    background-position: 100% -4px;
+    background-position: 100% 0;
 
 }
 
 .slide:nth-child(3) {
     background-image: url("../img/slide3.png");
-    background-position: 100% 15px;
+    background-position: 100% 19px;
 }
 
 .slide {
@@ -297,7 +295,6 @@ a {
     margin-bottom: 37px;
 }
 
-
 .features-description {
     width: 260px;
 }
@@ -323,6 +320,7 @@ a {
 .features-left::before {
     content: "";
     display: block;
+    background: #fb565a;
     background-image: url("../img/illustration-1.jpg");
     background-repeat: no-repeat;
     width: 300px;
@@ -336,6 +334,7 @@ a {
 .features-center::before {
     content: "";
     display: block;
+    background: #00ca74;
     background-image: url("../img/illustration-2.jpg");
     background-repeat: no-repeat;
     width: 300px;
@@ -345,6 +344,7 @@ a {
 .features-right::before {
     content: "";
     display: block;
+    background: #efc849;
     background-image: url("../img/illustration-3.jpg");
     background-repeat: no-repeat;
     width: 300px;
@@ -415,7 +415,6 @@ a {
     flex-direction: row;
     justify-content: space-between;
 }
-
 
 .index-info-description {
     width: 660px;
@@ -606,10 +605,11 @@ sup {
     padding-right: 30px;
 }
 
-.map {
+.map .wrap {
     position: relative;
+    background: #eeece5;
     background-image: url("../img/map.jpg");
-    width: 100%;
+    width: 1280px;
     height: 416px;
 }
 
@@ -729,6 +729,7 @@ sup {
 .name,
 .mail {
     display: inline-block;
+    vertical-align: top;
     width: 360px;
 }
 
@@ -927,8 +928,8 @@ sup {
 .social-btn {
     position: relative;
     display: inline-block;
-    font-size: 0;
     vertical-align: top;
+    font-size: 0;
     text-decoration: none;
     border-radius: 50%;
     width: 80px;
@@ -1305,7 +1306,6 @@ input[type="checkbox"]:checked + label:hover::before {
     outline: 0 none;
 }
 
-
 .filters-group-btn:active {
     background: #d5d5d5;
     box-shadow: inset 0 3px 0 -1px #bfbfbf;
@@ -1492,7 +1492,7 @@ input[type="checkbox"]:checked + label:hover::before {
     bottom: 0;
     left: 0;
     width: 360px;
-    height: 230px;
+    min-height: 230px;
     text-align: center;
     background: #eeeeee;
 }
@@ -1540,7 +1540,6 @@ input[type="checkbox"]:checked + label:hover::before {
     margin-top: 31px;
 }
 
-
 .item-description .item-btn:hover {
     background: #e74246;
 }
@@ -1559,12 +1558,11 @@ input[type="checkbox"]:checked + label:hover::before {
     padding: 0;
     margin: 0;
     margin-bottom: 61px;
+    margin-top: 25px;
 }
 
 .pagination-item {
     display: block;
-    width: 50px;
-    margin-top: 25px;
     color: #000000;
     text-transform: uppercase;
     text-align: center;
@@ -1579,6 +1577,8 @@ input[type="checkbox"]:checked + label:hover::before {
     margin-right: 11px;
     padding-top: 19px;
     padding-bottom: 14px;
+    padding-right: 20px;
+    padding-left: 21px;
 }
 
 .pagination-item a {
@@ -1600,6 +1600,7 @@ input[type="checkbox"]:checked + label:hover::before {
     width: 255px;
     padding-right: 6px;
     margin-right: 16px;
+    padding-left: 0;
 }
 
 .pagination-item-active {
