--- a/css/style.css
+++ b/css/style.css
@@ -212,9 +212,6 @@ a {
 }
 
 .slide {
-    position: absolute;
-    top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -225,6 +222,7 @@ a {
     width: 380px;
     color: #283136;
     padding-top: 43px;
+    padding-bottom: 82px;
 }
 
 .slide .btn {
